Community CSS Fix.

--- a/force-app/main/default/staticresources/rr_community_css.css
+++ b/force-app/main/default/staticresources/rr_community_css.css
@@ -666,7 +666,7 @@ select.rr-select-error,
     background: #297DFD;
     box-shadow: 0 4px 8px 0 rgba(41, 125, 253, 0.16), 0 4px 4px 0 rgba(0, 0, 0, 0.04), 0 8px 16px 0 rgba(41, 125, 253, 0.32);
     color: #FFFFFF;
-    min-height: 32px;
+    height: 32px;
     font-size: 1rem;
     padding: 0 16px;
 }
@@ -692,7 +692,7 @@ select.rr-select-error,
     color: #297dfd;
     border: 1px solid #d9d9d9;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.04);
-    min-height: 32px;
+    height: 32px;
     padding: 0 16px;
     font-size: 1rem;
 }
@@ -742,7 +742,7 @@ select.rr-select-error,
     background: #f2f2f2;
     color: #595959;
     padding: 0 16px;
-    min-height: 32px;
+    height: 32px;
 }
 
 .apollo-btn.tertiary:hover, .apollo-btn.tertiary:focus{
