--- a/force-app/main/default/aura/FilterPanel/FilterPanel.css
+++ b/force-app/main/default/aura/FilterPanel/FilterPanel.css
@@ -36,9 +36,9 @@
 }
 
 .THIS .fp-mobile .fp-search, .THIS .fp-search-input{
-  	text-align: left;
+  	text-align: right;
     margin-bottom: 10px;
-    width: 225px;
+    width: 230px;
     margin-top: 3px;
 }
 
