--- a/force-app/main/default/aura/Popup/Popup.css
+++ b/force-app/main/default/aura/Popup/Popup.css
@@ -71,7 +71,8 @@
 .THIS .p-header h2 {
     font-size: 24px;
     font-weight: 500;
-    line-height: 24px;
+    line-height: 30px;
+    width: 90%;
 }
 
 .THIS .p-header.success {
